--- a/styles/popup.css
+++ b/styles/popup.css
@@ -63,7 +63,19 @@ body {
 }
 
 .footer-description {
+    display: flex;
+    align-self: center;
+}
 
+.footer-description p {
+    display: flex;
+    align-self: center;
+    margin: 0px 10px 0px 0px;
+}
+
+.footer-description img {
+    width: 30px;
+    border-radius: 50px;
 }
 
 .error {
@@ -95,60 +107,4 @@ body {
 
 .header-cols {
     word-break: break-word;
-}
-
-
-
-
-
-
-
-
-
-
-/* 
-#request-success {
-    display: none;
-}
-
-#request-error {
-    display: none;
-} */
-
-.styled-table {
-    border-collapse: collapse;
-    margin: 25px 0;
-    font-size: 13px;
-    font-family: sans-serif;
-    min-width: 400px;
-    width: 100%;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-}
-
-.styled-table thead tr {
-    background-color: #009879;
-    color: #ffffff;
-    text-align: left;
-}
-
-.styled-table th,
-.styled-table td {
-    padding: 12px 15px;
-}
-
-.styled-table tbody tr {
-    border-bottom: 1px solid #dddddd;
-}
-
-.styled-table tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
-}
-
-.styled-table tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
-}
-
-.styled-table tbody tr.active-row {
-    font-weight: bold;
-    color: #009879;
 }
